; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_crystalhd.c_id2subtype.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_crystalhd.c_id2subtype.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BC_MSUBTYPE_DIVX = common dso_local global i32 0, align 4
@BC_MSUBTYPE_DIVX311 = common dso_local global i32 0, align 4
@BC_MSUBTYPE_MPEG2VIDEO = common dso_local global i32 0, align 4
@BC_MSUBTYPE_VC1 = common dso_local global i32 0, align 4
@BC_MSUBTYPE_WMV3 = common dso_local global i32 0, align 4
@BC_MSUBTYPE_H264 = common dso_local global i32 0, align 4
@BC_MSUBTYPE_INVALID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @id2subtype to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @id2subtype(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %19 [
    i32 131, label %7
    i32 130, label %9
    i32 132, label %11
    i32 129, label %13
    i32 128, label %15
    i32 133, label %17
  ]

7:                                                ; preds = %2
  %8 = load i32, i32* @BC_MSUBTYPE_DIVX, align 4
  store i32 %8, i32* %3, align 4
  br label %21

9:                                                ; preds = %2
  %10 = load i32, i32* @BC_MSUBTYPE_DIVX311, align 4
  store i32 %10, i32* %3, align 4
  br label %21

11:                                               ; preds = %2
  %12 = load i32, i32* @BC_MSUBTYPE_MPEG2VIDEO, align 4
  store i32 %12, i32* %3, align 4
  br label %21

13:                                               ; preds = %2
  %14 = load i32, i32* @BC_MSUBTYPE_VC1, align 4
  store i32 %14, i32* %3, align 4
  br label %21

15:                                               ; preds = %2
  %16 = load i32, i32* @BC_MSUBTYPE_WMV3, align 4
  store i32 %16, i32* %3, align 4
  br label %21

17:                                               ; preds = %2
  %18 = load i32, i32* @BC_MSUBTYPE_H264, align 4
  store i32 %18, i32* %3, align 4
  br label %21

19:                                               ; preds = %2
  %20 = load i32, i32* @BC_MSUBTYPE_INVALID, align 4
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %19, %17, %15, %13, %11, %9, %7
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
